--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -3,9 +3,103 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/87534dffde.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/stylesheets/style.css"> 
   <title>Home</title>
 </head>
-<body>
-  <h1>home</h1>
+<body class="body_home">
+  <main class="body_home_main">
+    <header class="body_home_main_header">
+      <div class="body_home_main_header_logo">
+        <h1>ibanez</h1>
+        <img src="" alt="">
+      </div>
+      <div class="body_home_main_header_menu">
+        <a href=""><i class="fa-solid fa-bars"></i></a>
+      </div>
+    </header>
+    <section>
+      <article>
+        <div>
+          <div>
+            <h2>Frontend Developer.</h2>
+          </div>
+          <div>
+            <p>I like to craft solid and scalable frontend products with great user experiences.</p>
+          </div>
+        </div>
+        <div>
+          <div>Highly skilled at progressive enhancement, design systems & UI Engineering.</div>
+          <div>Proven experience building successful products for clients across several countries.</div>
+        </div>
+      </article>
+      <article>
+        <img src="" alt="">
+      </article>
+    </section>
+    <section>
+      <article>
+        <div><h3>Design</h3></div>
+        <div><p>I'm probably not the typical designer positioned behind an Illustrator artboard adjusting pixels, but I design. Immersed in stylesheets tweaking font sizes and contemplating layouts is where you'll find me (~_^). I'm committed to creating fluent user experiences while staying fashionable.</p></div>
+      </article>
+      <article>
+        <div><h3>Engineering</h3></div>
+        <div><p>In building JavaScript applications, I'm equipped with just the right tools, and can absolutely function independently of them to deliver fast, resilient solutions optimized for scale — performance and scalabilty are priorities on my radar.</p></div>
+      </article>
+    </section>
+    <section>
+      <article>
+        <div><h3>Over the years</h3></div>
+        <div><p>I've built products for companies and businesses around the globe ranging from marketing websites to complex solutions and enterprise apps with focus on fast, elegant and accessible user experiences.
+          Currently, I work at Shopify as a Senior Frontend Engineer crafting thoughtful and inclusive experiences that adhere to web standards for over 3 million merchants across the world
+          Before now, I was Principal Frontend Engineer at hellotax, where I worked on a suite of tools and services tailored towards automated VAT compliance for multi-channel sellers in Europe.
+          Prior to hellotax, I was Senior frontend engineering consultant with Pixel2HTML, building JavaScript applications and interfaces for orgs and individuals.
+          I once also led the frontend team at Conectar, an e-learning startup through building multiple React applications into a single robust learning platform.</p></div>
+      </article>
+      <article>
+        <img src="" alt="">
+      </article>
+    </section>
+    <section>
+      <article>
+        <div>
+          <div><h3>I build & design stuff</h3></div>
+          <div><p>Open source projects, web apps and experimentals.</p></div>
+          <div><a href="">See my work</a></div>
+        </div>
+      </article>
+      <article>
+        <div>
+          <div><h3>I write, sometimes</h3></div>
+          <div><p>About design, frontend dev, learning and life.</p></div>
+          <div><a href="">Read my articles</a></div>
+        </div>
+      </article>
+    </section>
+    <section>
+      <article>
+        <div><h3>Send me a message!</h3></div>
+        <div><p>Got a question or proposal, or just want to say hello? Go ahead.</p></div>
+      </article>
+      <div>
+        <form action="">
+          <div>
+            <label for="">Yout Name</label>
+            <input type="text">
+          </div>
+          <div>
+            <label for="">Email Address</label>
+            <input type="text">
+          </div>
+          <div>
+            <label for="">Yout Message</label>
+            <input type="text">
+          </div>
+        </form>
+        <button>Shoot</button>
+      </div>
+    </section>
+  </main>
+  <footer></footer>
 </body>
 </html>
